[gd_scene load_steps=18 format=3 uid="uid://ex8idjxdm1hh"]

[ext_resource type="Script" path="res://Scenes and Scripts/Menus/Options/options.gd" id="1_3861l"]
[ext_resource type="Texture2D" uid="uid://ciiuci5no27wg" path="res://Assets/Art/UI/HUD/Map/map_hud.png" id="2_keo68"]
[ext_resource type="Texture2D" uid="uid://bagfqcw5jgjg3" path="res://Assets/Art/UI/Buttons/Zurück Button/zurück_button.png" id="4_0gl4k"]
[ext_resource type="Texture2D" uid="uid://cfx4mjux32qlv" path="res://Assets/Art/UI/Buttons/Zurück Button/zurück_button_dark.png" id="5_dujpj"]
[ext_resource type="Texture2D" uid="uid://g40m4yqqgyxy" path="res://Assets/Art/UI/Buttons/Zurück Button/zurück_button_light.png" id="6_laosp"]
[ext_resource type="Texture2D" uid="uid://cs0vi7dtksnoo" path="res://Assets/Art/UI/Buttons/menu_button_light.png" id="7_d5w1h"]
[ext_resource type="Texture2D" uid="uid://dm275h5fsqja2" path="res://Assets/Art/UI/Buttons/menu_button_mid.png" id="7_mwgj6"]
[ext_resource type="FontFile" uid="uid://dchkjqker6h15" path="res://Assets/Font/Margarine-Regular.ttf" id="8_xnx2p"]
[ext_resource type="Texture2D" uid="uid://b78qo42a06loa" path="res://Assets/Art/UI/Buttons/menu_button_dark.png" id="9_vtdwu"]
[ext_resource type="Texture2D" uid="uid://bwd8hrn7g8id6" path="res://Assets/Art/UI/Menus/background.png" id="10_omtvn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7d01j"]
texture = ExtResource("7_d5w1h")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wssrn"]
texture = ExtResource("7_mwgj6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l1wb0"]
texture = ExtResource("9_vtdwu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ve504"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t8qsd"]
texture = ExtResource("10_omtvn")

[sub_resource type="Theme" id="Theme_6rn65"]
OptionButton/colors/font_color = Color(0.819608, 0.415686, 0.262745, 1)
OptionButton/colors/font_outline_color = Color(0.227451, 0.223529, 0.290196, 1)
OptionButton/constants/outline_size = 20
OptionButton/font_sizes/font_size = 60
OptionButton/fonts/font = ExtResource("8_xnx2p")
OptionButton/icons/arrow = null
OptionButton/styles/hover = SubResource("StyleBoxTexture_7d01j")
OptionButton/styles/normal = SubResource("StyleBoxTexture_wssrn")
OptionButton/styles/pressed = SubResource("StyleBoxTexture_l1wb0")
PopupMenu/font_sizes/font_size = 65
PopupMenu/fonts/font = ExtResource("8_xnx2p")
PopupMenu/styles/hover = SubResource("StyleBoxTexture_ve504")
PopupMenu/styles/panel = SubResource("StyleBoxTexture_t8qsd")

[sub_resource type="ViewportTexture" id="ViewportTexture_p5w0b"]

[node name="Options" type="Node2D"]
position = Vector2(960, 540)
script = ExtResource("1_3861l")

[node name="Settings" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1010.0
offset_top = -590.0
offset_right = 1010.0
offset_bottom = 590.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_keo68")

[node name="Label" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -853.0
offset_top = 172.0
offset_right = -80.0
offset_bottom = 475.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.635294, 0.329412, 1)
theme_override_colors/font_outline_color = Color(0.870588, 0.0980392, 0.341176, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("8_xnx2p")
theme_override_font_sizes/font_size = 100
text = "Einstellungen"

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 310.0
offset_top = 280.0
offset_right = 1222.0
offset_bottom = 587.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_0gl4k")
texture_pressed = ExtResource("5_dujpj")
texture_hover = ExtResource("6_laosp")

[node name="Label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -706.0
offset_top = -402.0
offset_right = 67.0
offset_bottom = -99.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.635294, 0.329412, 1)
theme_override_colors/font_outline_color = Color(0.870588, 0.0980392, 0.341176, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("8_xnx2p")
theme_override_font_sizes/font_size = 80
text = "Bild"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="Label"]
layout_mode = 0
offset_left = 352.0
offset_top = 135.0
offset_right = 916.0
offset_bottom = 231.0
theme = SubResource("Theme_6rn65")
theme_override_fonts/font = ExtResource("8_xnx2p")
theme_override_font_sizes/font_size = 65
theme_override_icons/arrow = SubResource("ViewportTexture_p5w0b")
alignment = 1
icon_alignment = 1
item_count = 3
popup/item_0/text = "Vollbild"
popup/item_0/id = 0
popup/item_1/text = "Rahmenlos"
popup/item_1/id = 1
popup/item_2/text = "Fenstermodus"
popup/item_2/id = 2

[node name="Label" type="Label" parent="Label"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -774.0
offset_top = 141.0
offset_right = -1.0
offset_bottom = 444.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.635294, 0.329412, 1)
theme_override_colors/font_outline_color = Color(0.870588, 0.0980392, 0.341176, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("8_xnx2p")
theme_override_font_sizes/font_size = 60
text = "Darstellung"

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
